# Hallway-self-driving-drone

./: README.md  creating_package_ros_and_opencv.txt
CNN/: best_take_drone_images.py  py3_best_take_drone_images.py  some_net_FT.py
CorridorFlyControl/: CMakeLists.txt  mainpage.dox  package.xml
CorridorFlyControl/src/: main.cpp
Vanishing_Point/CorridorFlyControl/: manifest.xml  velocity.txt
Vanishing_Point/drone_control/: CMakeLists.txt  package.xml
Vanishing_Point/drone_control/src/: on_real_corridor.cpp
corridor_bag/: CMakeLists.txt  package.xml
corridor_bag/src/: fly_alone.cpp
drone_control/msg/: corridorFlyCommand.msg
edgeDetection/devel/: .catkin  local_setup.sh
edgeDetection/src/: CannyEdge  CannyEdge.cpp  edgeDetVideo  edgeDetVideo.cpp  edgeDetection  edgeDetection.cpp  oldDroneControl.cpp
openCV_tutor/2_Mod_Load_Save/: grayimage  making_gray.cpp
openCV_tutor/3_blending_images/: .blend_img.cpp.swp  blend_img  blend_img.cpp
openCV_tutor/4_scan_images/: img_scan  scan_img.cpp
openCV_tutor/5_extract_lines/: extract_lines  line_extracter.cpp
openCV_tutor/img_opening/: image.cpp
