<package>
  <name>CorridorFlyControl</name>
  <version>0.0.0</version>
  <description>
     Corridor
  </description>
  <maintainer email="pall.elod@gmail.com">Elod Pall</maintainer>
  <author email="pall.elod@gmail.com">Elod Pall</author> 
  <license>BSD</license>

 <buildtool_depend>catkin</buildtool_depend>
 
 <build_depend>ardrone_autonomy</build_depend>
 <build_depend>Corridor</build_depend>
 <build_depend>roscpp</build_depend>
 
 <run_depend>roscpp</run_depend>
 <run_depend>ardrone_autonomy</run_depend>
 <run_depend>Corridor</run_depend>


</package>


